k8s/ingress-hpa.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecom-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/v1/.*
            pathType: Prefix
            backend:
              service:
                name: ecom-api-gateway
                port:
                  number: 8080
          - path: /.*
            pathType: Prefix
            backend:
              service:
                name: ecom-frontend
                port:
                  number: 80
